--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,33 @@
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
 }
+/* Header section css */
+
+.header{
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.07);
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 999;
+}
+.header .container{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header .container .logo img{
+    width: 90px;
+}
+.header .container ul{
+    display: none;
+}
+.header .container .toggle-menu img{
+    width: 30px;
+}
