--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
     width: 100%;
     height: 70px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background: #fff;
@@ -32,11 +33,28 @@
     width: 90px;
 }
 .header .container ul{
-    display: none;
+    display: block;
+    position: relative;
+    top: 130px;
+    right: 20px;
+    padding: 0 20px;
+    background-color: #fff;
+    box-shadow: 10px 10px 15px 10px rgba(0, 0, 0, 0.07);
+    transform: translatey(-100%);
+    opacity: 0;
+    transition: 0.4s;
+}
+.header .container ul.active{
+    transform: translatey(0);
+    opacity: 1;
+}
+.header .container ul li{
+    padding: 10px 25px;
+}
+.header .container ul li a{}
+.header .container ul li a img{
+    width: 20px;
 }
 .header .container .toggle-menu img{
     width: 30px;
-}
-.header .container .toggle-menu img.active{
-    width: 100px;
 }
