delete the function and menu sectionn

--- a/src/App.css
+++ b/src/App.css
@@ -33,27 +33,10 @@
     width: 90px;
 }
 .header .container ul{
-    display: block;
-    position: relative;
-    top: 130px;
-    right: 20px;
-    padding: 0 20px;
-    background-color: #fff;
-    box-shadow: 10px 10px 15px 10px rgba(0, 0, 0, 0.07);
-    transform: translatey(-100%);
-    opacity: 0;
-    transition: 0.4s;
+    display: none;
 }
-.header .container ul.active{
-    transform: translatey(0);
-    opacity: 1;
-}
-.header .container ul li{
-    padding: 10px 25px;
-}
-.header .container ul li a{}
-.header .container ul li a img{
-    width: 20px;
+.header .container .location{
+    display: none;
 }
 .header .container .toggle-menu img{
     width: 30px;
