--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,33 @@
 }
 
 /* Home section */
+
+/* PopUp section */
+.popup{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #121212d9;
+    z-index: 999;
+}
+.popup .popup-container{
+    width: 350px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    border-radius: 10px;
+}
+
 /* Swiper Js Css */
 .swiper {
     margin-top: 40px;
