--- a/src/App.css
+++ b/src/App.css
@@ -60,8 +60,9 @@
     z-index: 999;
 }
 .popup .popup-container{
+    position: relative;
     width: 350px;
-    height: 350px;
+    height: 380px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -69,6 +70,36 @@
     background: #fff;
     border-radius: 10px;
 }
+.popup .popup-container img{
+    width: 200px;
+}
+.popup .popup-container p{
+    margin-bottom: 25px;
+    font-size: 15px;
+    text-align: center;
+}
+.popup .popup-container h3{
+    margin-bottom: 15px;
+}
+.popup .popup-container button{
+    position: absolute;
+    bottom: 10px;
+    left: 15px;
+    padding: 10px 15px;
+    border: none;
+    outline: none;
+    background: #ffa500;
+    font-weight: bold;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
+}
+.popup .popup-container .close{
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-weight: bold;
+}
+
 
 /* Swiper Js Css */
 .swiper {
