--- a/src/App.css
+++ b/src/App.css
@@ -331,6 +331,22 @@
         font-size: 16px;
     }
 
+    /* popUp section */
+    .popup .popup-container{
+        position: relative;
+        width: 450px;
+        height: 450px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: #fff;
+        border-radius: 10px;
+    }
+    .popup .popup-container img{
+        width: 200px;
+    }
+
 }
 
 @media screen and (min-width : 999px){
@@ -404,6 +420,22 @@
         font-size: 20px;
         margin-left: 35px;
     }
+
+    /* popUp section */
+    .popup .popup-container{
+        position: relative;
+        width: 460px;
+        height: 460px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: #fff;
+        border-radius: 10px;
+    }
+    .popup .popup-container img{
+        width: 210px;
+    }
 }
 
 @media screen and (min-width : 1090px){
@@ -428,6 +460,21 @@
         border: 1px solid #848484;
         border-radius: 12px;
     }
+        /* popUp section */
+        .popup .popup-container{
+            position: relative;
+            width: 480px;
+            height: 480px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background: #fff;
+            border-radius: 10px;
+        }
+        .popup .popup-container img{
+            width: 230px;
+        }
 }
 @media screen and (min-width : 1389px){
     .restaurent{
@@ -443,6 +490,21 @@
         height: 160px;
         
     }
+        /* popUp section */
+        .popup .popup-container{
+            position: relative;
+            width: 500px;
+            height: 500px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background: #fff;
+            border-radius: 10px;
+        }
+        .popup .popup-container img{
+            width: 250px;
+        }
 }
 
 @media screen and (min-width : 1390px){
@@ -473,4 +535,19 @@
         font-size: 13px;
     }
 
+    /* popUp section */
+    .popup .popup-container{
+        position: relative;
+        width: 500px;
+        height: 500px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: #fff;
+        border-radius: 10px;
+    }
+    .popup .popup-container img{
+        width: 250px;
+    }
 }
