--- a/src/App.css
+++ b/src/App.css
@@ -282,6 +282,7 @@
 
 .top-rests {
   width: 100%;
+  height: 30vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -331,6 +332,51 @@
 .top-rests .container .card .right .dicImg {
   font-size: 14px;
   color: #ff0000;
+}
+
+/* Rest items section */
+.restItems{
+    margin-top: 18rem;
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.restItems ul li{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #707070;
+    width: 500px;
+    height: 130px;
+    padding: 0 12px;    
+}
+.restItems ul li .right img{
+    width: 120px;
+}
+.restItems ul li .left img{ 
+    width: 13px;
+}
+.restItems ul li .left h3{
+    font-size: 14px;
+    margin-bottom: 10px;
+    color: #353535;
+}
+.restItems ul li .left span{
+    color: #444444;
+    font-size: 13px;
+}
+.restItems ul li .left button{
+    margin-top: 5px;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+    padding: 2px 3px;
+    background-color: #00d4a6;
+    border-radius: 5px;
+    font-size: 12px;
+    cursor: pointer;
 }
 
 /* Responsive screen size */
