--- a/src/App.css
+++ b/src/App.css
@@ -336,7 +336,7 @@
 
 /* Rest items section */
 .restItems{
-    margin-top: 18rem;
+    margin-top: 14rem;
     width: 100%;
     height: 50vh;
     display: flex;
@@ -348,12 +348,12 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #707070;
-    width: 500px;
-    height: 130px;
+    width: 300px;
+    height: 110px;
     padding: 0 12px;    
 }
 .restItems ul li .right img{
-    width: 120px;
+    width: 100px;
 }
 .restItems ul li .left img{ 
     width: 13px;
@@ -743,6 +743,52 @@
   .top-rests .container .card .right .dicImg {
     font-size: 16px;
   }
+
+  /* Rest items section */
+.restItems{
+    margin-top: 18rem;
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.restItems ul li{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #707070;
+    width: 500px;
+    height: 130px;
+    padding: 0 12px;    
+}
+.restItems ul li .right img{
+    width: 120px;
+}
+.restItems ul li .left img{ 
+    width: 13px;
+}
+.restItems ul li .left h3{
+    font-size: 14px;
+    margin-bottom: 10px;
+    color: #353535;
+}
+.restItems ul li .left span{
+    color: #444444;
+    font-size: 13px;
+}
+.restItems ul li .left button{
+    margin-top: 5px;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+    padding: 2px 3px;
+    background-color: #00d4a6;
+    border-radius: 5px;
+    font-size: 12px;
+    cursor: pointer;
+}
+
 }
 
 @media screen and (min-width: 1390px) {
@@ -793,39 +839,50 @@
   .popup .popup-container img {
     width: 250px;
   }
-}
 
-/* Top restaurent
-
-.top-rests{
+  /* Rest items section */
+.restItems{
+    margin-top: 18rem;
     width: 100%;
+    height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.top-rests .container{
-    width: 600px;
-    margin-top: 25px;
-    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-}
-.top-rests .container .card{
+.restItems ul li{
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    gap: 25px;
-    padding: 25px 15px;
+    border-bottom: 1px solid #707070;
+    width: 500px;
+    height: 130px;
+    padding: 0 12px;    
 }
-.top-rests .container .card .left img{
-    width: 150px;
-    border-radius: 10px;
+.restItems ul li .right img{
+    width: 120px;
 }
-.top-rests .container .card .right{
-    line-height: 25px;
+.restItems ul li .left img{ 
+    width: 13px;
 }
-.top-rests .container .card .right .icon img{
-    width: 30px;
+.restItems ul li .left h3{
+    font-size: 14px;
+    margin-bottom: 10px;
+    color: #353535;
 }
-.top-rests .container .card .right .dicImg img{
-    width: 30px;
+.restItems ul li .left span{
+    color: #444444;
+    font-size: 13px;
 }
- */
+.restItems ul li .left button{
+    margin-top: 5px;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+    padding: 2px 3px;
+    background-color: #00d4a6;
+    border-radius: 5px;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+}
