--- a/src/App.css
+++ b/src/App.css
@@ -322,6 +322,60 @@
     cursor: pointer;
 }
 
+/* Cart items */
+
+.cart-page{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.cart-page .container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.cart-page .container img{
+    width: 300px;
+}
+.cart-page .container .details{
+    width: 500px;
+    height: 200px;
+    text-align: center;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 10px 10px 10px 15px rgba(0, 0, 0, 0.1);
+}
+.cart-page .container .details h3{
+    font-size: 25px;
+    margin-top: 25px;
+}
+.cart-page .container .details .buttons{
+    margin-top: 30px;
+    display: flex;
+    gap: 15px;
+}
+.cart-page .container .details .buttons h4{
+    font-size: 20px;
+}
+.cart-page .container .details .buttons button{
+    border: none;
+    outline: none;
+    background: #000;
+    color: #fff;
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 7px 25px;
+    transition: .3s;
+}
+.cart-page .container .details .buttons button:hover{
+    background: #9ef4e1;
+    color: #000;
+}
+
 /* Responsive screen size */
 @media screen and (min-width: 745px) {
   /* Swipper */
