add conetnts in account component

--- a/src/App.css
+++ b/src/App.css
@@ -467,6 +467,8 @@
   width: 15px;
 }
 
+/* Account section */
+
 /* Responsive screen size */
 @media screen and (min-width: 745px) {
   /* Swipper */
